# exception-insights

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.py  demo_class.wpa.081i.whole-program  ls.cpp.save  simple
.github/actions/build-and-test/: action.yml
.github/workflows/: ubuntu-build.yml
LSDA/: lsda_output.txt
binary/: lsda_objcopy_onlysection
docs/: Doxyfile
docs/html/: annotated.html  classElfParser-members.html  classElfParser.html  classconanfile_1_1safe__conan-members.html  classconanfile_1_1safe__conan.html  classconanfile_1_1safe__conan__inherit__graph.dot  classes.html  dir_000001_000000.html  dir_000002_000001.html  dir_2e2e4c50a9f9af0ae1e6ebcdbbd6b2b8.html  dir_2e2e4c50a9f9af0ae1e6ebcdbbd6b2b8_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_aa18d1cec4550cd4291ea0d8daa6d897.html  dir_aa18d1cec4550cd4291ea0d8daa6d897_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d4732b30f34b9249a2d2b0c68779abf6.html  dir_d4732b30f34b9249a2d2b0c68779abf6_dep.dot  elf__parser_8cpp.html  elf__parser_8cpp__incl.dot  elf__parser_8hpp.html  elf__parser_8hpp__dep__incl.dot  elf__parser_8hpp__incl.dot  elf__parser_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherits.html  main_8cpp.html  main_8cpp__incl.dot  md__2home_2mchan_2Senior__Project_2exception-insights_2README.html  pages.html  placeholder_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_8.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
docs/latex/: annotated.tex  classElfParser.tex  classconanfile_1_1safe__conan.tex  classconanfile_1_1safe__conan.tex.tmp  classconanfile_1_1safe__conan__inherit__graph.dot  elf__parser_8cpp.tex  elf__parser_8cpp.tex.tmp  elf__parser_8cpp__incl.dot  elf__parser_8hpp.tex  elf__parser_8hpp__dep__incl.dot  elf__parser_8hpp__incl.dot  elf__parser_8hpp_source.tex  files.tex  hierarchy.tex  index.tex  main_8cpp.tex  main_8cpp__incl.dot  md__2home_2mchan_2Senior__Project_2exception-insights_2README.tex  placeholder_8hpp_source.tex  refman.tex
include/: abi_parse.hpp  abiparse.hpp  concrete_state.hpp  concrete_states.hpp  elf_parser.hpp  gcc_parse.hpp  safe.hpp  safe_state.hpp  state.hpp  state_context.hpp  state_machine.hpp  validator.hpp  validator_catch.hpp
src/: abi_parse.cpp  abiparse.cpp  concrete_state.cpp  concrete_states.cpp  elf_parser.cpp  gcc_parse.cpp  main  main.cpp  main_asm  parse.py  safe.cpp  safe_state.cpp  state.cpp  state_context.cpp  state_machine.cpp  test.c  throw.cpp  validator.cpp  validator_catch.cpp
src/testing_programs/: demo_two.h  parse.py  shell.nix  single_tu.cpp  test.c
test/: test  test.cpp
test/binary/: lsda_objcopy_onlysection
testing_programs/: demo_class.cpp  demo_two.cpp  elf_test  gcc_parse.py  generate_and_build.ps1  generate_and_build.sh  simple.cpp
testing_programs/logs/: RTTI_typeinfo.txt  function_binary.txt
tests/: abi_parser.test.cpp  elf_parser.test.cpp  gcc_callgraph.test.cpp  main.test.cpp  safe.test.cpp  state_machine.test.cpp  testing.test.cpp  validator.test.cpp  validator_catch.test.cpp
tests/testing_programs/: demo.cpp  demo_class  demo_class.cpp
